--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+/* ----------------About--------------------- */
+.my-5 {
+  background-color: whitesmoke;
+  height: 100px;
+  width: 100%;
+  margin-left: 20px;
+  margin-top:100px;
+}
