--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,4 @@
-/* .App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
 /* ----------------About--------------------- */
 .my-5 {
   background-color: whitesmoke;
@@ -53,8 +16,8 @@ main {
   padding: 50px 30px;
 }
 :root {
-  --primary: #8c54ff;
-  --secondary: #F3A847;
+  --primary: rgba(126, 154, 25, 0.639);
+  --secondary: #966627;
   --tertiary: #B12704;
   --light: #fafafa;
   --dark: #000000;
@@ -125,7 +88,8 @@ h6 {
 }
 
 p {
-  font-size: 1.1rem;
+  font-size: 1.0rem;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   margin-top: 0;
 }
 
@@ -195,7 +159,8 @@ input:focus {
 }
 
 li {
-  list-style: none;
+  /* list-style: none; */
+  list-style:lower-roman;
 }
 
 nav a:hover {
@@ -238,6 +203,8 @@ textarea {
   margin-left: var(--spacing-one);
 }
 
+
+
 .mx-2 {
   margin-right: var(--spacing-two);
   margin-left: var(--spacing-two);
@@ -251,6 +218,7 @@ textarea {
 .my-2 {
   margin-top: var(--spacing-two);
   margin-bottom: var(--spacing-two);
+  background-image: src=(url 'https://images.unsplash.com/photo-1640622308122-b1b0f3cd5a7f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxMXx8fGVufDB8fHx8&auto=format&fit=crop&w=1200&q=60');
 }
 
 .my-5 {
@@ -340,4 +308,9 @@ a {
 
 .navActive {
   color: var(--secondary);
+}
+
+photo {
+margin-left: 0px;
+
 }
