--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,7 @@ a:hover {
 
 header {
   background: var(--dark);
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 header a {
